# niftysim

./: .gitignore  CMakeLists.txt  Dockerfile  NiftySimConfig.cmake.in  README.md  README.txt  UseNiftySim.cmake.in  doxygen.conf.in
cmake/: FindCUDA.cmake
docs/: doxygen_mainpage.dox
matlab/: reducedBasis.m
models/: ball_ball.xml  box.msh  box_membrane.xml  box_membrane_explicit_mesh.xml  box_membrane_nonlin.xml  box_shell.xml  cubehex10.xml  submodel_demo.xml  submodel_merging_demo.xml
source/: CMakeLists.txt  niftysim.cpp  pause.cpp  pause.h  tledAABB.cpp  tledAABB.cu  tledAABB.h  tledAABB.tpp  tledAABBXMLExporter.h  tledAABBXMLExporter.tpp  tledAABBXMLImporter.h  tledAABBXMLImporter.tpp  tledAABB_kernels.cu  tledBV.cu  tledBV.h  tledBV.tpp  tledBVH.cu  tledBVH.h  tledBVH.tpp  tledBVHCreator.h  tledBVHCreator.tpp  tledBVHGPU.cu  tledBVHGPU.h  tledBVHGPU.tpp  tledBVHTraverser.h  tledBVHTraverser.tpp  tledBVHTraverserCPU.cpp  tledBVHTraverserCPU.h  tledBVHTraverserCPU.tpp  tledBVHTraverserGPU.cu  tledBVHTraverserGPU.h  tledBVHTraverserGPU_kernels.h  tledBVHTraverserGPU_kernels.tpp  tledBVHTraverserImplGPU.h  tledBVHTraverserImplGPU.tpp  tledBVHXMLExporter.h  tledBVHXMLExporter.tpp  tledBVHXMLImporter.h  tledBVHXMLImporter.tpp  tledBVXMLExporter.h  (+480 more)
testing/: CMakeLists.txt  testBVHTraverserCPU.cpp  testBVHTraverserGPU.cu  testCUDAHelpers.cu  testCUDAMemoryBlock.cu  testComplexCUDAHelpers.cu  testConstraintManager.cpp  testContactSolverCPU.cpp  testDeformableContactSurface.cpp  testDeformableContactSurfaceCPU.cpp  testDeformableContactSurfaceGPU.cu  testDeformableContactSurfaceXMLExporter.cpp  testDeformableMembraneContactSurfaceXMLExporter.cpp  testElementMembraneNonLinear.cpp  testElementMembraneSimpleLinear.cpp  testElementShellBSTP1.cpp  testHelpers.cpp  testMSHMeshLoader.cpp  testMatrixFunctions.cpp  testMeshTopology.cpp  testModel.cpp  testMovingRigidContactSurface.cpp  testOBB.cpp  testPolynomial.cpp  testPressureConstraint.cpp  testRigidContactSurface.cpp  testSelfCollisionBVH.cpp  testSelfCollisionBVHCreator.cpp  testSelfCollisionBVHXMLExporter.cpp  testSelfCollisionBVHXMLImporter.cpp  testSolver.cpp  testSubModelManager.cpp  testTractionConstraint.cpp  testVTKMeshExporter.cpp  testVTKMeshLoader.cpp  testVectorArithmetic.cpp  testXMLDeformableContactSurfaceCreator.cpp  testXMLDeformableMembraneContactSurfaceCreator.cpp
testing/data/: QRD_test_10x10.txt  QRD_test_15x10.txt  QRD_test_Q_ref_10x10.txt  QRD_test_Q_ref_15x10.txt  QRD_test_R_ref_10x10.txt  QRD_test_R_ref_15x10.txt  ball_ball.xml  box8.msh  box_surface.vtk  c_extruded_refined.msh  collision_bar.msh  collision_bar.vtk  contact_2_tetras.xml  membrane_cooks_shell_hires.xml  membrane_force_stretch_nonlinear.xml  membrane_force_stretch_shell.xml  membrane_rotation_shell.xml  membrane_shear_nonlinear.xml  membrane_shear_shell.xml  membrane_static_linear.xml  membrane_static_nonlinear.xml  membrane_static_shell.xml  membrane_static_shell_1x1.xml  membrane_stretch_force_shell.xml  membrane_stretch_linear.xml  membrane_stretch_nonlinear.xml  membrane_stretch_nonlinear_irregular.xml  membrane_stretch_shell.xml  membrane_stretch_shell_irregular.xml  moving_wall.xml  organic_shape.msh  organic_shape.vtk  sphere.msh  sphere.vtk  sphere_surface.vtk  two_cubes_sheet.xml  wall.msh
testing/helpers/: CMakeLists.txt  tledCUDAUnitTest.h  tledShellPatchTest.cpp  tledShellPatchTest.h  tledTestResources.h.in  tledUnitTest.cpp  tledUnitTest.h
xmlParser/: CMakeLists.txt  xmlParser.cpp  xmlParser.h
